@@ -165,3 +165,4 @@ xt/test-ispower.pl
 xt/twin_prime_count.t
 xt/nth_twin_prime.t
 .travis.yml
+inc/Devel/CheckLib.pm
